--- a/wifi/WCNSS_qcom_cfg.ini
+++ b/wifi/WCNSS_qcom_cfg.ini
@@ -153,7 +153,7 @@ gNeighborScanTimerPeriod=200
 
 # default value of this parameter is zero to enable dynamic threshold allocation
 # to set static roming threshold uncomment below parameter and set vaule
-gNeighborLookupThreshold=76
+#gNeighborLookupThreshold=78
 
 gNeighborScanChannelMinTime=20
 gNeighborScanChannelMaxTime=30
@@ -263,7 +263,6 @@ beaconEarlyTerminationWakeInterval=11
 #Bluetooth Alternate Mac Phy (1 = enable the BT AMP feature, 0 = disable)
 
 gEnableBtAmp=0
-
 
 #SOFTAP Channel Range selection
 
